--- a/BusinessDirectory/Storyboards/Base.lproj/Main.storyboard
+++ b/BusinessDirectory/Storyboards/Base.lproj/Main.storyboard
@@ -50,7 +50,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
-                                                    <color key="backgroundColor" red="0.74274625483247425" green="0.74274625483247425" blue="0.74274625483247425" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <color key="backgroundColor" red="0.81542984480710379" green="0.81542984480710379" blue="0.81542984480710379" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstItem="Vb9-Gv-H2n" firstAttribute="top" secondItem="U8R-iV-GBQ" secondAttribute="top" constant="8" id="1Kq-Zf-KVf"/>
                                                         <constraint firstAttribute="trailing" secondItem="Vb9-Gv-H2n" secondAttribute="trailing" constant="7" id="Ake-Cz-Qbd"/>
@@ -389,7 +389,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" red="0.84506812928348451" green="0.84758700031924306" blue="0.88602463240476004" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
-                        <color key="barTintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" red="0.82541889198047602" green="0.82541889198047602" blue="0.82541889198047602" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
                         <segue destination="whb-ma-TsU" kind="relationship" relationship="viewControllers" id="FNm-eY-n23"/>
